--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap'); */
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -29,3 +27,22 @@
   background-color:lightskyblue;
 }
 
+a:link {
+  color: lightblue;
+  text-decoration: none;
+}
+
+a:visited {
+  color: lightblue;
+  text-decoration: none;
+}
+
+a:hover {
+  color: white;
+  text-decoration: underline;
+}
+
+a:active {
+  color: blue;
+  text-decoration: underline;
+}
